# simple-ance

./: README.md  main.py  pyproject.toml
simple_ance/: ann_index.py  evaluate.py  model.py  train.py
